dark mode fix

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -4,9 +4,5 @@
 
 html,
 body {
-  @apply bg-white dark:bg-black;
-
-  @media (prefers-color-scheme: dark) {
-    color-scheme: dark;
-  }
+  @apply bg-white bg-black;
 }
